log solution